--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="DaulairesAPI">
-    <meta name="keywords" content="DaulairesAPI">
+    <meta name="description" content="Clicking Game for bordom">
+    <meta name="keywords" content="Clicking Game">
     <meta name="author" content="lol.andrew">
-    <title>Lester API</title>
+    <title>Clicking Game</title>
 </head>
 
 <body class="app-body" style="background-color: black; overflow: hidden;">
