--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Clicking Game for bordom">
     <meta name="keywords" content="Clicking Game">
     <meta name="author" content="lol.andrew">
+    <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.ico" />
     <title>Clicking Game</title>
 </head>
 
