chore: Update side menu toggle functionality and styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <div id="multiplier" style="color: white;">
             <p>Multiplier: <span id="multiplier_value">1</span></p>
         </div>
-        <div id="side-menu" style="color: white;">
+        <div id="menu-toggle" onclick="toggleMenu()" style="cursor:pointer;">&#x2630;</div> <!-- Left Arrow -->
+        <div id="side-menu" style="color: white; display:none;">
             <button id="buy">Buy Multiplier</button>
             <span id="multiplier_cost">10</span>
         </div>
