--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="multiplier" style="color: white;">
             <p>Multiplier: <span id="multiplier_value">1</span></p>
         </div>
-        <div id="menu-toggle" onclick="toggleMenu()" style="cursor:pointer; color:white;">&#x2630;</div>
+        <div id="menu-toggle" onclick="toggleMenu()" style="cursor:pointer; color:white;">Shop</div>
         <div id="side-menu" style="color: white; display:none;">
             <button id="buy">Buy Multiplier</button>
             <span id="multiplier_cost">10</span>
