--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <meta name="author" content="lol.andrew">
     <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.ico" />
     <title>Clicking Game</title>
+    <style>
+        #menu-toggle {
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding: 10px;
+            background-color: black;
+            border: 1px solid white;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 
 <body class="app-body" style="background-color: black; overflow: hidden;">
