--- a/index.html
+++ b/index.html
@@ -5,25 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="An engaging click-based game for entertainment">
-    <meta name="keywords" content="Clicking Game, Entertainment, Fun">
-    <meta name="author" content="Your Name">
-    <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
-    <title>Modern Clicking Game</title>
+    <!-- Improved meta description for SEO -->
+    <meta name="description" content="An engaging clicking game for endless fun. Upgrade your click power!">
+    <meta name="keywords" content="Clicking Game, Upgrade, Power, Fun">
+    <meta name="author" content="lol.andrew">
+    <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.ico">
+    <title>Clicking Game</title>
     <style>
+        /* Modernized styles */
         body {
-            background-color: #333;
             font-family: Arial, sans-serif;
-            color: white;
             margin: 0;
             padding: 0;
+            background-color: #333;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             overflow: hidden;
         }
 
-        .container {
-            max-width: 800px;
-            margin: auto;
+        #root {
             text-align: center;
+            width: 80%;
+        }
+
+        #click_counter,
+        #multiplier {
+            margin-bottom: 20px;
         }
 
         #menu-toggle {
@@ -32,44 +42,34 @@
             top: 10px;
             right: 10px;
             z-index: 100;
+            background-color: rgba(0, 0, 0, 0.8);
+            border: none;
+            border-radius: 5px;
+            padding: 10px;
+            font-size: 16px;
         }
 
         canvas {
-            width: 100%;
-            height: 80vh;
-            display: block;
-            margin: auto;
+            border: 1px solid white;
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <h1 class="my-4">Clicking Game</h1>
-        <div class="row justify-content-center">
-            <div class="col-md-4">
-                <div class="card bg-dark text-white mb-4">
-                    <div class="card-header">Game Stats</div>
-                    <div class="card-body">
-                        <p>Clicks: <span id="clicks">0</span></p>
-                        <p>Multiplier: <span id="multiplier_value">1x</span></p>
-                    </div>
-                </div>
-            </div>
+    <div id="root">
+        <div id="click_counter">
+            <p>Clicks: <span id="clicks">0</span></p>
         </div>
-        <div class="row justify-content-center">
-            <div class="col-md-4">
-                <div class="card bg-dark text-white">
-                    <div class="card-header">Shop</div>
-                    <div class="card-body">
-                        <button id="buy" class="btn btn-primary">Buy Multiplier (+1)</button>
-                        <p class="mt-2">Cost: <span id="multiplier_cost">10</span></p>
-                    </div>
-                </div>
-            </div>
+        <div id="multiplier">
+            <p>Multiplier: <span id="multiplier_value">1</span></p>
         </div>
+        <div id="menu-toggle" onclick="toggleMenu()">Shop</div>
+        <div id="side-menu" style="display:none;">
+            <button id="buy">Buy Multiplier</button>
+            <span id="multiplier_cost">10</span>
+        </div>
+        <canvas id="canvas"></canvas>
     </div>
-    <div id="menu-toggle" onclick="toggleMenu()" style="cursor:pointer;">Shop</div>
     <script src="assets/js/game/main.js"></script>
 </body>
 
