chore: Update click-based game UI and functionality

--- a/index.html
+++ b/index.html
@@ -11,66 +11,14 @@
     <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.ico" />
     <title>Clicking Game</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        .app-body {
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #333;
-            color: white;
-        }
-
-        #root {
-            text-align: center;
-            width: 80%;
-            max-width: 600px;
-        }
-
-        #click_counter,
-        #multiplier {
-            margin-bottom: 20px;
-        }
-
         #menu-toggle {
-            cursor: pointer;
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            z-index: 100;
-            background-color: rgba(0, 0, 0, 0.8);
-            border: none;
-            outline: none;
-            border-radius: 5px;
-            padding: 10px;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        #menu-toggle:hover {
-            transform: scale(1.1);
-        }
-
-        #side-menu {
             position: absolute;
-            top: 50px;
-            right: 10px;
-            background-color: #444;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-            display: none;
-        }
-
-        canvas {
+            top: 0;
+            right: 0;
+            padding: 10px;
+            background-color: black;
             border: 1px solid white;
             border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
