chore: Add CPS counter to display clicks per second

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <div id="multiplier" style="color: white;">
             <p>Multiplier: <span id="multiplier_value">1</span></p>
         </div>
+        <div id="cps-counter" style="color: white;">
+            <p>CPS: <span id="cps">0</span></p>
+        </div>
         <div id="menu-toggle" onclick="toggleMenu()" style="cursor:pointer; color:white;">Shop</div>
         <div id="side-menu" style="color: white; display:none;">
             <button id="buy">Buy Multiplier</button>
@@ -40,7 +43,8 @@
         </div>
         <canvas id="canvas">
         </canvas>
-        <script src="assets/js/game/main.js"></script>
+        <script src="assets/js/game/main.js">
+        </script>
     </div>
 </body>
 
