--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         <div id="side-menu" style="color: white; display:none;">
             <button id="buy">Buy Multiplier</button>
             <span id="multiplier_cost">10</span>
+            <button id="auto_click_buy">Buy Auto Clicker</button>
+            <span id="auto_click_cost">100</span>
+            <button id="auto_click_speed">Buy Auto Clicker Speed</button>
+            <span id="auto_click_speed_cost">1000</span>
         </div>
         <canvas id="canvas">
         </canvas>
