chore: Add auto clicker counter to display the number of auto clickers

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 
             </p>
         </div>
+        <div id="auto_clicker_counter" style="color: white;">
+            <p>Auto Clickers: <span id="auto_clicker">0</span></p>
+        </div>
         <div id="multiplier" style="color: white;">
             <p>Multiplier: <span id="multiplier_value">1</span></p>
         </div>
