chore: Update auto clicker button ID to "auto_clicker_cost" in index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button id="buy">Buy Multiplier</button>
             <span id="multiplier_cost">10</span>
             <button id="buy_auto_clicker">Buy Auto Clicker</button>
-            <span id="auto_click_cost">100</span>
+            <span id="auto_clicker_cost">100</span>
             <button id="auto_click_speed">Buy Auto Clicker Speed</button>
             <span id="auto_click_speed_cost">1000</span>
         </div>
