--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         <script src="assets/js/game/main.js">
         </script>
     </div>
+    <script src="/socket.io/socket.io.js" type="text/javascript"></script>
+    <script>
+        var socket = io();
+    </script>
 </body>
 
 </html>
