--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
     </div>
     <script src="/socket.io/socket.io.js" type="text/javascript"></script>
     <script>
-        var socket = io();
+        var socket = io("https://vlone.ddns.net/", {
+            secure: true,
+            rejectUnauthorized: true,
+        });
+
+        socket.on("connect", () => {
+            console.log("Connected to server");
+        });
     </script>
 </body>
 
