--- a/index.html
+++ b/index.html
@@ -54,16 +54,7 @@
         </script>
     </div>
     <script src="/socket.io/socket.io.js" type="text/javascript"></script>
-    <script>
-        var socket = io("https://vlone.ddns.net/", {
-            secure: true,
-            rejectUnauthorized: true,
-        });
-
-        socket.on("connect", () => {
-            console.log("Connected to server");
-        });
-    </script>
+    <script src="assets/js/game/socket/socket.js"></script>
 </body>
 
 </html>
