--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <script src="assets/js/game/main.js">
         </script>
     </div>
+    <script src="/socket.io/socket.io.js" type="text/javascript"></script>
+    <script src="assets/js/game/socket/socket.js"></script>
 </body>
 
 </html>
